--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Quintessential&display=swap');
 .App {
   text-align: center;
+  color: white;
+  background-color:#282c34;
+  font-family: 'Arial', Serif;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -7,19 +12,22 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +36,277 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.searchBarContainer{
+  width: 40%;
+  margin: 0 auto;
+  margin-top: 10px;
+  text-align: left;
+}
+
+.searchResultsWrapper{
+  width: 40%;
+    border: 1px solid black;
+
+}
+
+.movieTitle{
+  font-size: 25px;
+  margin-bottom: 5px;
+}
+
+.yearAndGenre{
+  margin-bottom: 5px;
+  font-size: 15px;
+}
+
+.fiveInRed{
+  color: red;
+}
+
+#movieLimit p {
+  margin-bottom: 0px;
+  margin-top: 2px;
+}
+
+#movieLimit{
+   position: fixed;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 100px;
+    background:hsl(115, 88%, 50%);
+    margin-bottom: 0px;
+}
+
+#errorContainer{
+  width: 40%;
+}
+.headerText h1{
+  font-size: 40px;
+  font-family: 'Quintessential', cursive;
+}
+
+.Wrapper{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+.nominationsWrapper {
+  width: 45%;
+  border: 1px solid black;
+}
+
+.cardWrapper{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+  align-items: center;
+}
+
+.cardWrapper:last-child{
+  margin-bottom: 200px;
+}
+
+
+.header{
+  height: 600px;
+  background-size: cover;
+  background-position: center bottom;
+}
+
+#ShoppifyImg{
+  width: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: start;
+  padding: 20px;
+}
+.pageWrapper {
+  width: 90%;
+  margin: 0 auto;
+  background-color: black;
+}
+
+.bannerContainer{
+  display: flex;
+  flex-direction: row;
+}
+
+.mainText{
+  padding-top: 60px;
+  width: 40%;
+  margin: 0 auto;
+  text-align: left;
+}
+.mainText h1{
+  font-size: 50px;
+  font-family: 'Arial', Serif;
+  font-weight: 900;
+  font-family: 'Quintessential', cursive;
+  color: chartreuse;
+
+}
+.movieInfo{
+  margin-right: 15px;
+}
+.Title{
+  font-size: 20px;
+  margin-bottom: 5px;
+  color:chartreuse;
+}
+.searchInput{
+    background-color: black;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    height: 40px;
+}
+
+.searchInput input{
+  width: auto;
+  margin: auto;
+  border-radius: 5px 5px 5px 5px;;
+  background-color: rgb(48, 48, 48);
+  color: white;
+  height: 20px;
+  width: 300px;
+}
+
+
+#nominateButton {
+  background-color:chartreuse;
+  height: 80%;
+  
+}
+
+.results > div + div {
+    margin-left: 5px;
+    padding-left: 5px;
+    border-top: 1px solid rgb(71, 71, 71);
+}
+
+.display_movies {
+  width: 65%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  text-align: left;
+}
+
+
+
+.nomination{
+
+  width: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  height: 60%;
+  margin: 10px;
+  padding: 12px;
+}
+
+.nominationsDetails{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack:space-evenly;
+      -ms-flex-pack:space-evenly;
+          justify-content:space-evenly;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  height: 90%;
+  margin-left: 20px;
+}
+
+.nominationsInfoSubContainer{
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 5px;
+}
+
+.nominationImage{ 
+  height: 200px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+#runtime {
+  background-color:darkblue;
+  padding: 0px 6px;
+  margin-right: 7px;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+#released {
+  background-color:darkblue;
+  padding: 0px 6px;
+  margin-right: 7px;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+#director{
+  background-color:rgb(240, 25, 150);
+   padding: 0px 6px;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+#shopifyLogo{
+width: 200px;
+height: 60px;
+-o-width: 200px;
+}
+
+.nominationsWrapper h3, .Wrapper h2 {
+  font-size: 28px;
+}
+
+.limitReached{
+  font-size: 23px;
+}
+
+.thanksForVoting{
+  font-size: 22px;
 }
